# prior-art

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  publish.yml  rebuild-index.yml  refresh-gold-standard.yml  test.yml
bench/: build_gold_standard.py  metrics.py  run.py
bench/fixtures/: gold_standard.jsonl
docs/: AGENT_CONFIG.md  API.md  ARCHITECTURE.md  SETUP.md  STYLE.md  TAXONOMY.md  TESTING.md
scripts/: generate_seed_cache.py
scripts/index_build/: build.py  fetch.py
src/priorart/: __init__.py  __main__.py  cli.py  server.py
src/priorart/core/: __init__.py  ast_extract.py  build_cost.py  cache.py  deps_dev.py  find_alternatives.py  github_client.py  index_download.py  ingest_repo.py  ingestion.py  inspect.py  query.py  registry.py  retrieval.py  scorecard_client.py  scoring.py  utils.py
src/priorart/data/: config.yaml  taxonomy.yaml
tests/: __init__.py  conftest.py  test_ast_extract.py  test_bench_gold_standard.py  test_bench_metrics.py  test_build_cost.py  test_cache.py  test_cli.py  test_deps_dev.py  test_find_alternatives.py  test_github_client.py  test_index_build_fetch.py  test_index_download.py  test_ingest_repo.py  test_ingestion.py  test_inspect.py  test_query.py  test_registry.py  test_retrieval.py  test_scorecard_client.py  test_scoring.py
