[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "priorart"
version = "0.1.0"
description = "Build-vs-borrow intelligence for agentic workflows - helps AI agents discover and evaluate open source packages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Prior Art Contributors", email = "priorart@example.com"}
]
keywords = ["cli", "mcp", "prior-art", "package-discovery", "open-source", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "fastmcp>=0.5.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.19.0",
    "PyGithub>=2.1.0",
    "jsonschema>=4.0",
    "python-dateutil>=2.8.0",
    "packaging>=23.0",
    "beautifulsoup4>=4.12.0",  # For HTML to markdown conversion
    "markdownify>=0.11.0",     # For HTML to markdown conversion
    "gitpython>=3.1.0",         # For GitIngest functionality
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
    "pytest-cov>=4.0",
]

[project.scripts]
priorart = "priorart.cli:main"
priorart-server = "priorart.server:main"

[project.urls]
Homepage = "https://github.com/priorart/priorart"
Repository = "https://github.com/priorart/priorart"
Documentation = "https://github.com/priorart/priorart#readme"
Issues = "https://github.com/priorart/priorart/issues"

# Setuptools configuration
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
priorart = [
    "data/*.yaml",
    "data/*.yml",
]

# Tool configurations
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501", "B008", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]